--- a/BAI TAP/TH 1.ipynb
+++ b/BAI TAP/TH 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8e7f2a91",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d11a0417",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "3af9aa8d",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "b6033d01",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "7ff6c872",
    "metadata": {},
    "outputs": [
@@ -113,16 +113,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "91c7c07a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Số chẵn\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Nhập số: \"))\n",
     "if num % 2 == 0:\n",
     "    print(\"Số chẵn\")\n",
     "else:\n",
     "    print(\"Số lẻ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "66aa8722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== AI Prediction System ===\n",
+      "1) Sentiment analysis\n",
+      "2) Weather forecast\n",
+      "3) Exit\n",
+      "Please choose an option:\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple menu\n",
+    "print (\"=== AI Prediction System ===\")\n",
+    "print(\"1) Sentiment analysis\")\n",
+    "print(\"2) Weather forecast\")\n",
+    "print('3) Exit')\n",
+    "print(\"Please choose an option:\") \n"
    ]
   }
  ],
