Fix: Properly format notebook with complete Jupyter structure for GitHub rendering

--- a/BAI TAP/BT 1.ipynb
+++ b/BAI TAP/BT 1.ipynb
@@ -1,24 +1,154 @@
 {
-    "nbformat_minor":  5,
-    "nbformat":  4,
-    "metadata":  {
-
-                 },
-    "cells":  [
-                  {
-                      "outputs":  [
-
-                                  ],
-                      "source":  [
-                                     "a = int(input(\u0027Nhập số nguyên: \u0027))\n",
-                                     "result = a * 2\n",
-                                     "print(result)"
-                                 ],
-                      "cell_type":  "code",
-                      "execution_count":  null,
-                      "metadata":  {
-                                       "id":  "#VSC-7e00c01b"
-                                   }
-                  }
-              ]
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = int(input('Nhập số nguyên: '))\n",
+    "result = a * 2\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = float(input('Nhập chiều rộng:'))\n",
+    "b = float(input('Nhập chiều dài:'))\n",
+    "if a<=0 or b<=0:\n",
+    "    print('Chiều rộng và chiều dài phải lớn hơn 0')\n",
+    "else:\n",
+    "    s = b * a - ((a/2)**2 * 3.14)\n",
+    "    print(f'Diện tích hình chữ nhật có hình tròn bị cắt là: {s:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = str(input('Nhập một chữ cái: '))\n",
+    "if len(c) != 1 or not c.isalpha():\n",
+    "    print('Nhập một chữ cái')\n",
+    "else:\n",
+    "    if c.islower():\n",
+    "        a = c.upper()\n",
+    "        print(a)\n",
+    "    else:\n",
+    "        b = c.lower()\n",
+    "        print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = str(input('Nhập một kí tự: '))\n",
+    "if c.isalpha():\n",
+    " print(c + ' là kí tự alphabet')\n",
+    "else:\n",
+    " print(c + ' không phải là kí tự alphabet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upper_user_input = input(\"Nhập một ký tự in hoa: \")\n",
+    "if len(upper_user_input) != 1 or upper_user_input.islower() or not upper_user_input.isalpha():\n",
+    "    print('Nhập chỉ một ký tự in hoa')\n",
+    "elif upper_user_input == 'A':\n",
+    "    print('A ký tự đặc biệt')\n",
+    "\n",
+    "elif True:\n",
+    "    lower = upper_user_input.lower()\n",
+    "    prev = chr(ord(lower) - 1)\n",
+    "    print(f'Ký tự in thường trước {lower} là: {prev}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "num1, num2, num3 = map(int, [input(f'Nhập cạnh thứ {i}: ') for i in range(1, 4)])\n",
+    "if num1 + num2 > num3 and num1 + num3 > num2 and num2 + num3 > num1:\n",
+    "    s = (num1 + num2 + num3) / 2 \n",
+    "    area = math.sqrt(s * (s - num1) * (s - num2) * (s - num3))\n",
+    "    print('Diện tích tam giác là: ', area)\n",
+    "else:\n",
+    "    print('Không phải 3 cạnh của tam giác')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = str(input('Nhập chuỗi ký tự: '))\n",
+    "if len(c) >= 20:\n",
+    "    print(c[6],c[10])\n",
+    "else:\n",
+    "    print('Chuỗi phải có ít nhất 20 ký tự')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = str(input('Nhập họ và tên chủ hộ: '))\n",
+    "trc = float(input('Nhập số điện tháng trước: '))\n",
+    "sau = float(input('Nhập số điện tháng sau: '))\n",
+    "tieu_thu = sau - trc\n",
+    "if tieu_thu <= 50:\n",
+    "    tien = tieu_thu * 1984\n",
+    "elif tieu_thu <= 100:\n",
+    "    tien = 50 * 1984 + (tieu_thu - 50) * 2050\n",
+    "elif tieu_thu <= 200:\n",
+    "    tien = 50 * 1984 + 50 * 2050 + (tieu_thu - 100) * 2380\n",
+    "elif tieu_thu <= 300:\n",
+    "    tien = 50 * 1984 + 50 * 2050 + 100 * 2380 + (tieu_thu - 200) * 2998\n",
+    "elif tieu_thu <= 400:\n",
+    "    tien = 50 * 1984 + 50 * 2050 + 100 * 2380 + 100 * 2998 + (tieu_thu - 300) * 3350\n",
+    "elif tieu_thu > 400:\n",
+    "    tien = 50 * 1984 + 50 * 2050 + 100 * 2380 + 100 * 2998 + 100 * 3350 + (tieu_thu - 400) * 3460\n",
+    "print(f'Họ và tên chủ hộ: {name}\\n Tiền điện phải trả: {tien + tien * 0.08:.0f} VND')"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
